<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <Button
        android:id="@+id/back_signup"
        android:layout_width="@dimen/fifty"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_chevron_left_black_24dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:onClick="backClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </Button>

    <TextView
        android:id="@+id/signup_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:padding="@dimen/twenty"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/signup_page"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginVertical="45dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <TextView
        android:id="@+id/Fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="monospace"
        android:text="@string/first_name_text_signup"
        android:textColor="@color/white">

    </TextView>

    <EditText
        android:id="@+id/edit_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:inputType="textShortMessage"
        android:background="@drawable/rounded_crs"
        android:layout_gravity="center_horizontal"
        android:fontFamily="monospace"
        android:layout_marginHorizontal="45dp"
        android:gravity="center"
        android:padding="4dp"
        >

    </EditText>

    <TextView
        android:id="@+id/Lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="monospace"
        android:text="@string/last_name_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/Fname"
        app:layout_constraintTop_toBottomOf="@id/signup_page">

    </TextView>

    <EditText
        android:id="@+id/edit_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textShortMessage"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="monospace"
        android:layout_marginHorizontal="45dp"
        android:gravity="center"
        android:padding="5dp"
        android:background="@drawable/rounded_crs"
        >
    </EditText>

    <TextView
        android:id="@+id/email_add_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:fontFamily="monospace"
        android:text="@string/nicname"
        android:textColor="@color/white"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_fname">
    </TextView>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:layout_marginHorizontal="45dp"
        android:gravity="center"
        android:padding="4dp"
        android:background="@drawable/rounded_crs"
        android:layout_gravity="center_horizontal"
        android:inputType="textShortMessage">
    </EditText>

    <TextView
        android:id="@+id/pass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ten"
        android:layout_marginTop="15dp"
        android:fontFamily="monospace"
        android:layout_gravity="center_horizontal"
        android:text="@string/password_signup"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email">

    </TextView>

    <EditText
        android:id="@+id/edit_pass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:layout_marginHorizontal="45dp"
        android:gravity="center"
        android:padding="4dp"
        android:background="@drawable/rounded_crs"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass1">
    </EditText>

    <TextView
        android:id="@+id/retype_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="monospace"
        android:text="@string/retype_password_signup"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/edit_retype_pass"
        app:layout_constraintTop_toBottomOf="@id/edit_email">
    </TextView>

    <EditText
        android:id="@+id/edit_retype_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:layout_marginHorizontal="45dp"
        android:gravity="center"
        android:padding="4dp"
        android:background="@drawable/rounded_crs"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_pass1"
        app:layout_constraintTop_toBottomOf="@id/retype_pass">

    </EditText>


    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="@dimen/ten"
        android:layout_gravity="center_horizontal"
        android:fontFamily="monospace"
        android:text="@string/address_signup"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_pass1">

    </TextView>

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:layout_marginHorizontal="45dp"
            android:gravity="center"
            android:padding="4dp"
            android:background="@drawable/rounded_crs"
            android:inputType="textShortMessage"
            >
        </EditText>



    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:backgroundTint="@color/green"
        android:fontFamily="sans-serif-black"
        android:text="@string/sign_up"
        android:layout_marginHorizontal="85dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="register"
        app:layout_constraintTop_toBottomOf="@id/edit_address">

    </Button>


</LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>