<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/ten"
    app:cardCornerRadius="@dimen/radius"
    app:cardElevation="@dimen/radius"
    android:background="@color/colorPrimaryDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ten"
        android:layout_marginStart="@dimen/ten"
        android:layout_marginTop="@dimen/ten"
        android:layout_marginBottom="@dimen/ten"
        android:layout_margin="4dp">
        <ImageView
            android:id="@+id/imgView_orders"
            android:layout_width="@dimen/fifty"
            android:layout_height="@dimen/fifty"
            android:icon="@drawable/bed2"
            app:layout_constraintEnd_toStartOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_order"
            android:text="@string/app_name"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@id/name_order"
            app:layout_constraintBottom_toTopOf="@id/description">
        </TextView>
        <TextView
            android:id="@+id/description"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_text1"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_order" >
        </TextView>
        <TextView
            android:id="@+id/vits"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_text1"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" >
        </TextView>

        <TextView
            android:id="@+id/status"
            android:layout_width="@dimen/hundred"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/fifteen"
            android:text="@string/sample_text2"
            android:gravity="center"
            android:padding="@dimen/ten"
            android:backgroundTint="@color/colorPrimaryDark"
            android:background="@drawable/button_bg_rounded_corners"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>